# shorts100

./: .env.example  .gitignore  LICENSE  README.md  Release_Note_Build_29.md  Release_Note_Build_30.md  Release_Note_Build_31.md  Release_Notes.md  Shorts100.com 점진적 개발 가이드.md  Update.md  docker-compose.yml  main.py  page.tsx  plan.md  skeleton_plan.md  zardu_closed_testers_list_20251225.csv
backend/: Dockerfile  pyproject.toml  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 1b44494a4038_add_download_and_search_logs.py  41c5444bd4d6_empty.py  69925a950dc3_ranking_redesign.py  7e63f243a966_add_user_and_download_log.py  90f85c01e520_add_oauth_and_profile_fields.py  9bf8b12e74c5_add_creator_and_reaction_skeletons.py  __init__.py  a1b2c3d4e5f6_chart_entry_period_key_expand.py
backend/app/: cache.py  celery_app.py  config.py  db.py  main.py  page.tsx
backend/app/core/: cache.py
backend/app/crawlers/: __init__.py  tasks.py  youtube_client.py
backend/app/models/: __init__.py  channel.py  chart_entry.py  consent_log.py  download_log.py  download_request_log.py  ranking.py  search_query_log.py  user.py  video.py
backend/app/schemas/: __init__.py  channel.py  video.py
backend/app/services/: __init__.py  auth.py  brand_safety.py  downloader.py  freshness.py  ranking.py
backend/scripts/: clean_stale_charts.py  reindex_charts.py
backend/tests/unit/: test_brand_safety.py  test_ranking.py
docs/: PROGRESS.md  backlog_features.md  cache.py  collection_ranking_redesign.md  page.tsx
frontend/: Dockerfile  RankingList.tsx  api.ts  capacitor.config.ts  (+10 more)
(+63 files in other folders)
